# due-diligence-ai

./: README.md  agent.py  data.py  main.py  pyproject.toml  server.py
experimenting/: testing.ipynb
experimenting/.ipynb_checkpoints/: testing-checkpoint.ipynb
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentStatus.tsx  BriefView.tsx  ErrorBanner.tsx  Sidebar.tsx  TickerInput.tsx
frontend/hooks/: useAnalysis.ts  useHistory.ts
frontend/types/: index.ts
