[project]
name = "finance-due-dil-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "groq>=1.4.0",
    "langgraph>=1.2.4",
    "uvicorn>=0.49.0",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
